refactor: migrate from deprecated URL constructor